--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Node_Editor_Framework"]
 	path = Node_Editor_Framework
-	url = J:/Project/Unity/Git/SkillSystem/Assets/Cabin Icarus/Node_Editor_Framework
+	url =https://github.com/yika-aixi/Node_Editor_Framework.git
