--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "Node_Editor_Framework"]
 	path = Node_Editor_Framework
 	url = https://github.com/yika-aixi/Node_Editor_Framework
+	branch = Cabin_Icarus
