!ADO 整理了结构,将扩展分离为单独的目录

--- a/SkillSystem/Scripts/Expansion/Runtime/CabinIcarus.IcSkillSystem.Expansion.Runtime.asmdef
+++ b/SkillSystem/Scripts/Expansion/Runtime/CabinIcarus.IcSkillSystem.Expansion.Runtime.asmdef
@@ -1,6 +1,8 @@
 {
-    "name": "CabinIcarus.SkillSystem.Runtime",
-    "references": [],
+    "name": "CabinIcarus.IcSkillSystem.Expansion.Runtime",
+    "references": [
+        "CabinIcarus.IcSkillSystem.Runtime"
+    ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
