--- a/xNode_IcSkill/Runtime/CabinIcarus.IcSkillSystem.xNodeIc.asmdef
+++ b/xNode_IcSkill/Runtime/CabinIcarus.IcSkillSystem.xNodeIc.asmdef
@@ -3,7 +3,8 @@
     "references": [
         "GUID:79a2db83a53a0cd488b45b860db81a67",
         "GUID:35d5fc268037eb7409b6c3462ed4f8ce",
-        "GUID:b8e24fd1eb19b4226afebb2810e3c19b"
+        "GUID:b8e24fd1eb19b4226afebb2810e3c19b",
+        "GUID:7acbcb6bac0f3f345abd3119ae9e707b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
