--- a/xNode_IcSkill/Base/CabinIcarus.IcSkillSystem.xNodeIc.Base.asmdef
+++ b/xNode_IcSkill/Base/CabinIcarus.IcSkillSystem.xNodeIc.Base.asmdef
@@ -1,8 +1,8 @@
 {
     "name": "CabinIcarus.IcSkillSystem.xNodeIc.Base",
     "references": [
-        "GUID:79a2db83a53a0cd488b45b860db81a67",
-        "GUID:b8e24fd1eb19b4226afebb2810e3c19b"
+        "XNode",
+        "CabinIcarus.NPBehave"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -11,6 +11,5 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+    "versionDefines": []
 }
