--- a/xNode_IcSkill/Runtime/CabinIcarus.IcSkillSystem.xNodeIc.asmdef
+++ b/xNode_IcSkill/Runtime/CabinIcarus.IcSkillSystem.xNodeIc.asmdef
@@ -1,10 +1,11 @@
 {
     "name": "CabinIcarus.IcSkillSystem.xNodeIc",
     "references": [
-        "GUID:79a2db83a53a0cd488b45b860db81a67",
-        "GUID:35d5fc268037eb7409b6c3462ed4f8ce",
-        "GUID:b8e24fd1eb19b4226afebb2810e3c19b",
-        "GUID:7acbcb6bac0f3f345abd3119ae9e707b"
+        "CabinIcarus.IcSkillSystem.Runtime",
+        "CabinIcarus.IcSkillSystem.Expansion.Runtime",
+        "CabinIcarus.IcSkillSystem.xNodeIc.Base",
+        "CabinIcarus.NPBehave",
+        "XNode"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -13,6 +14,5 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+    "versionDefines": []
 }
