!T(asmdef) Skill System Runtime 引用 `Utf8Json`

--- a/SkillSystem/Scripts/Runtime/CabinIcarus.IcSkillSystem.Runtime.asmdef
+++ b/SkillSystem/Scripts/Runtime/CabinIcarus.IcSkillSystem.Runtime.asmdef
@@ -1,12 +1,14 @@
 {
     "name": "CabinIcarus.IcSkillSystem.Runtime",
-    "references": [],
-    "optionalUnityReferences": [],
+    "references": [
+        "Utf8Json"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": []
 }
