!T(asmdef) Skill System XNode Base 引用 `Skill System Runtime`

--- a/xNode_IcSkill/Base/CabinIcarus.IcSkillSystem.xNodeIc.Base.asmdef
+++ b/xNode_IcSkill/Base/CabinIcarus.IcSkillSystem.xNodeIc.Base.asmdef
@@ -1,6 +1,7 @@
 {
     "name": "CabinIcarus.IcSkillSystem.xNodeIc.Base",
     "references": [
+        "CabinIcarus.IcSkillSystem.Runtime",
         "XNode",
         "CabinIcarus.NPBehave"
     ],
