!W(asmdef) 添加`CabinIcarus.IcSkillSystem.Editor`的依赖

--- a/xNode_IcSkill/Editor/CabinIcarus.IcSkillSystem.xNodeIc.Editor.asmdef
+++ b/xNode_IcSkill/Editor/CabinIcarus.IcSkillSystem.xNodeIc.Editor.asmdef
@@ -7,7 +7,8 @@
         "CabinIcarus.IcSkillSystem.xNodeIc",
         "CabinIcarus.NPBehave",
         "XNode",
-        "XNodeEditor"
+        "XNodeEditor",
+        "CabinIcarus.IcSkillSystem.Editor"
     ],
     "includePlatforms": [
         "Editor"
