!T(asmdef) `xNode`,`CabinIcarus.IcSkillSystem.xNodeIc.Base`依赖添加

--- a/SkillSystem/Scripts/Expansion/Editor/CabinIcarus.IcSkillSystem.Expansion.Editor.asmdef
+++ b/SkillSystem/Scripts/Expansion/Editor/CabinIcarus.IcSkillSystem.Expansion.Editor.asmdef
@@ -3,9 +3,10 @@
     "references": [
         "CabinIcarus.IcSkillSystem.Expansion.Runtime",
         "CabinIcarus.IcSkillSystem.Runtime",
-        "CabinIcarus.IcSkillSystem.Editor"
+        "CabinIcarus.IcSkillSystem.Editor",
+        "CabinIcarus.IcSkillSystem.xNodeIc.Base",
+        "XNode"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -14,5 +15,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
