!T(asmdef) remove utf8json depend,add odinSerializer depend

--- a/SkillSystem/Scripts/Runtime/CabinIcarus.IcSkillSystem.Runtime.asmdef
+++ b/SkillSystem/Scripts/Runtime/CabinIcarus.IcSkillSystem.Runtime.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "CabinIcarus.IcSkillSystem.Runtime",
+    "rootNamespace": "",
     "references": [
-        "Utf8Json"
+        "Utf8Json",
+        "CabinIcarus.OdinSerializer"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -10,5 +12,6 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": false
 }
